--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "admin-dashboard": "file:",
+    "chart.js": "^4.4.7",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
+    "react-calendar-heatmap": "^1.9.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-heatmap-grid": "^0.9.1",
     "react-router-dom": "^7.1.1",
     "recharts": "^2.15.0"
   },
